# relaxed-memory-separation-logic

./: .gitignore  .gitlab-ci.yml  .ignore  Dockerfile  LICENSE  README.md  _CoqProject  build-docker.sh  coq-gpfsl.opam  coq-omo.opam  coq-orc11.opam  make-zip.sh  notes.md  statistics.py
gpfsl-examples/: README-COMPASS.md  big_op.v  gset_disj.v  list_helper.v  loc_helper.v  map_seq.v  nat_tokens.v  set_helper.v  sflib.v  uniq_token.v
gpfsl-examples/algebra/: mono_list.v  mono_list_list.v  saved_vprop.v  set.v
gpfsl-examples/arc/: code.v  proof_composition.v  proof_omo_client.v  spec_composition.v
gpfsl-examples/chase_lev/: code.v
gpfsl-examples/circ_buff/: code.v  code_na.v  proof_gps.v
gpfsl-examples/event/: event.v  ghost.v
gpfsl-examples/exchanger/: code.v  code_split.v  proof_composition.v  proof_composition_diaframe.v  proof_graph.v  proof_graph_piggyback.v  proof_graph_resource.v  proof_graph_resource_closed.v  proof_mp_client.v  proof_sequential_client.v  spec_composition.v  spec_composition_diaframe.v  spec_graph.v  spec_graph_piggyback.v  spec_graph_resource.v
gpfsl-examples/folly/: code_mpmcqueue.v  code_singleElementQueue.v  code_turnSequencer.v  proof_mpmcqueue_composition.v  proof_mpmcqueue_composition_diaframe.v  proof_mpmcqueue_history.v  proof_singleElementQueue_composition.v  proof_singleElementQueue_composition_diaframe.v  proof_singleElementQueue_history.v  proof_turnSequencer_composition.v  proof_turnSequencer_composition_diaframe.v  proof_turnSequencer_history.v  spec_mpmcqueue_composition.v  spec_mpmcqueue_history.v  spec_singleElementQueue_composition.v  spec_singleElementQueue_history.v  spec_turnSequencer_composition.v  spec_turnSequencer_history.v
gpfsl-examples/graph/: ghost.v  graph.v  graph_extend.v  map_helper.v  (+1 more)
orc11/: base.v  event.v  location.v  mem_order.v  memory.v  progress.v  thread.v  tview.v  value.v  view.v  weak_lat_solver.v
(+169 files in other folders)
